# tauri-plugin-automation

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
guest-js/: README.md  package-lock.json  package.json  tsconfig.json
guest-js/src/: commands.ts  index.ts
src/: lib.rs  server.rs
