[package]
name = "tauri-plugin-automation-server"
version = "0.2.0"
description = "HTTP automation server for Tauri v2 apps - enables external control and automated testing"
authors = ["Corey Herrera"]
license-file = "LICENSE"
repository = "https://github.com/dcherrera/tauri-plugin-automation"
homepage = "https://github.com/dcherrera/tauri-plugin-automation"
readme = "README.md"
keywords = ["tauri", "tauri-v2", "automation", "testing", "webdriver"]
categories = ["development-tools::testing", "gui"]
edition = "2021"
rust-version = "1.70"

[features]
default = []

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
